--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-session-mongoose": "^0.5.2",
     "koa-session-store": "^1.1.1",
     "koa-static": "^1.5.2",
+    "koa-bodyparser":"^2.2.0",
     "moment": "^2.11.1",
     "mongoose": "^4.3.4",
     "thunkify": "^2.1.2"
